--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -39,7 +39,8 @@ includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.InfDB.jar}:\
-    ${file.reference.jaybird-full-2.2.5.jar}
+    ${file.reference.jaybird-full-2.2.5.jar}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
