--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,13 +34,17 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/CoronaProjekt
 excludes=
 file.reference.InfDB.jar=C:\\Users\\Jacob\\Desktop\\tutorial\\InfDB.jar
+file.reference.InfDB.jar-1=..\\Downloads\\databas-komponent\\databas-komponent\\InfDB.jar
 file.reference.jaybird-full-2.2.5.jar=C:\\Users\\Jacob\\Desktop\\tutorial\\jaybird-full-2.2.5.jar
+file.reference.jaybird-full-2.2.5.jar-1=..\\Downloads\\databas-komponent\\databas-komponent\\jaybird-full-2.2.5.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.InfDB.jar}:\
     ${file.reference.jaybird-full-2.2.5.jar}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.InfDB.jar-1}:\
+    ${file.reference.jaybird-full-2.2.5.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
