--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,4 +1,6 @@
 compile.on.save=true
-file.reference.InfDB.jar=C:\\Users\\Simon Sandberg\\OneDrive\\System\\Scrum_XtremePrograming\\System_Files\\Project-Corona\\databas-komponent\\InfDB.jar
-file.reference.jaybird-full-2.2.5.jar=C:\\Users\\Simon Sandberg\\OneDrive\\System\\Scrum_XtremePrograming\\System_Files\\Project-Corona\\databas-komponent\\jaybird-full-2.2.5.jar
-user.properties.file=C:\\Users\\jacob\\AppData\\Roaming\\NetBeans\\11.2\\build.properties
+file.reference.InfDB.jar=C:\\db\\InfDB.jar
+file.reference.InfDB.jar-1=C:\\db\\InfDB.jar
+file.reference.jaybird-full-2.2.5.jar=C:\\db\\jaybird-full-2.2.5.jar
+file.reference.jaybird-full-2.2.5.jar-1=C:\\db\\jaybird-full-2.2.5.jar
+user.properties.file=C:\\Users\\Padfo\\AppData\\Roaming\\NetBeans\\11.3\\build.properties
