Uppdaterat fil klass

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=CoronaProjekt
+application.vendor=Jacob
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,12 +33,17 @@ dist.jar=${dist.dir}/CoronaProjekt.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/CoronaProjekt
+endorsed.classpath=
 excludes=
-file.reference.commons-io-2.6.jar=commons-io-2.6-bin\\commons-io-2.6\\commons-io-2.6.jar
+file.reference.aspose.words.jdk16-7.0.0.jar=C:\\Users\\Jacob\\Downloads\\aspose.words.jdk16-7.0.0.jar\\aspose.words.jdk16-7.0.0.jar
 file.reference.InfDB.jar=C:\\Users\\Jacob\\Desktop\\tutorial\\InfDB.jar
 file.reference.InfDB.jar-1=..\\Downloads\\databas-komponent\\databas-komponent\\InfDB.jar
+file.reference.InfDB.jar-2=C:\\Users\\Jacob\\Desktop\\tutorial\\InfDB.jar
 file.reference.jaybird-full-2.2.5.jar=C:\\Users\\Jacob\\Desktop\\tutorial\\jaybird-full-2.2.5.jar
 file.reference.jaybird-full-2.2.5.jar-1=..\\Downloads\\databas-komponent\\databas-komponent\\jaybird-full-2.2.5.jar
+file.reference.jaybird-full-2.2.5.jar-2=C:\\Users\\Jacob\\Desktop\\tutorial\\jaybird-full-2.2.5.jar
+file.reference.poi-3.9.jar=C:\\Users\\Jacob\\Downloads\\poi-3.9.jar\\poi-3.9.jar
+file.reference.poi-scratchpad-3.8-beta3.jar=C:\\Users\\Jacob\\Downloads\\jar_files (1)\\poi-scratchpad-3.8-beta3.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -46,7 +52,11 @@ javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.InfDB.jar-1}:\
     ${file.reference.jaybird-full-2.2.5.jar-1}:\
-    ${file.reference.commons-io-2.6.jar}
+    ${file.reference.InfDB.jar-2}:\
+    ${file.reference.jaybird-full-2.2.5.jar-2}:\
+    ${file.reference.poi-3.9.jar}:\
+    ${file.reference.poi-scratchpad-3.8-beta3.jar}:\
+    ${file.reference.aspose.words.jdk16-7.0.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
