--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,4 +1,10 @@
 compile.on.save=true
+do.depend=false
+do.jar=true
+do.jlink=false
 file.reference.InfDB.jar=C:\\Users\\Simon Sandberg\\OneDrive\\System\\Scrum_XtremePrograming\\System_Files\\Project-Corona\\databas-komponent\\InfDB.jar
 file.reference.jaybird-full-2.2.5.jar=C:\\Users\\Simon Sandberg\\OneDrive\\System\\Scrum_XtremePrograming\\System_Files\\Project-Corona\\databas-komponent\\jaybird-full-2.2.5.jar
-user.properties.file=C:\\Users\\jacob\\AppData\\Roaming\\NetBeans\\11.2\\build.properties
+javac.debug=true
+javadoc.preview=true
+jlink.strip=false
+user.properties.file=C:\\Users\\Jacob\\AppData\\Roaming\\NetBeans\\11.2\\build.properties
