Logga in funktionen

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -2,9 +2,12 @@ compile.on.save=true
 do.depend=false
 do.jar=true
 do.jlink=false
-file.reference.InfDB.jar=C:\\Users\\Simon Sandberg\\OneDrive\\System\\Scrum_XtremePrograming\\System_Files\\Project-Corona\\databas-komponent\\InfDB.jar
-file.reference.InfDB.jar-1=C:\\Users\\Simon Sandberg\\OneDrive\\System\\Scrum_XtremePrograming\\System_Files\\Project-Corona\\databas-komponent\\InfDB.jar
-file.reference.jaybird-full-2.2.5.jar=C:\\Users\\Simon Sandberg\\OneDrive\\System\\Scrum_XtremePrograming\\System_Files\\Project-Corona\\databas-komponent\\jaybird-full-2.2.5.jar
+file.reference.InfDB.jar=C:\\Users\\Alice\\Desktop\\db\\InfDB.jar
+file.reference.InfDB.jar-1=C:\\Users\\Alice\\Desktop\\db\\InfDB.jar
+file.reference.InfDB.jar-2=C:\\Users\\Alice\\Desktop\\db\\InfDB.jar
+file.reference.jaybird-full-2.2.5.jar=C:\\Users\\Alice\\Desktop\\db\\jaybird-full-2.2.5.jar
+file.reference.jaybird-full-2.2.5.jar-1=C:\\Users\\Alice\\Desktop\\db\\jaybird-full-2.2.5.jar
+file.reference.jaybird-full-2.2.5.jar-2=C:\\Users\\Alice\\Desktop\\db\\jaybird-full-2.2.5.jar
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
