--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -2,10 +2,13 @@ compile.on.save=true
 do.depend=false
 do.jar=true
 do.jlink=false
-file.reference.InfDB.jar=C:\\Users\\Simon Sandberg\\OneDrive\\System\\Scrum_XtremePrograming\\System_Files\\Project-Corona\\databas-komponent\\InfDB.jar
-file.reference.InfDB.jar-1=C:\\Users\\Simon Sandberg\\OneDrive\\System\\Scrum_XtremePrograming\\System_Files\\Project-Corona\\databas-komponent\\InfDB.jar
-file.reference.jaybird-full-2.2.5.jar=C:\\Users\\Simon Sandberg\\OneDrive\\System\\Scrum_XtremePrograming\\System_Files\\Project-Corona\\databas-komponent\\jaybird-full-2.2.5.jar
+file.reference.InfDB.jar=C:\\Users\\juan\\Desktop\\InfDB.jar
+file.reference.InfDB.jar-1=C:\\Users\\juan\\Desktop\\InfDB.jar
+file.reference.InfDB.jar-2=C:\\Users\\juan\\Desktop\\InfDB.jar
+file.reference.jaybird-full-2.2.5.jar=C:\\Users\\juan\\Desktop\\jaybird-full-2.2.5.jar
+file.reference.jaybird-full-2.2.5.jar-1=C:\\Users\\juan\\Desktop\\jaybird-full-2.2.5.jar
+file.reference.jaybird-full-2.2.5.jar-2=C:\\Users\\juan\\Desktop\\jaybird-full-2.2.5.jar
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=C:\\Users\\Jacob\\AppData\\Roaming\\NetBeans\\11.2\\build.properties
+user.properties.file=C:\\Users\\juan\\AppData\\Roaming\\NetBeans\\11.0\\build.properties
