--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -8,4 +8,4 @@ file.reference.jaybird-full-2.2.5.jar=C:\\Users\\Simon Sandberg\\OneDrive\\Syste
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=C:\\Users\\Jacob\\AppData\\Roaming\\NetBeans\\11.2\\build.properties
+user.properties.file=C:\\Users\\mizz_\\AppData\\Roaming\\NetBeans\\11.2\\build.properties
