--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -39,9 +39,11 @@ file.reference.aspose.words.jdk16-7.0.0.jar=C:\\Users\\Jacob\\Downloads\\aspose.
 file.reference.InfDB.jar=C:\\Users\\Jacob\\Desktop\\tutorial\\InfDB.jar
 file.reference.InfDB.jar-1=..\\Downloads\\databas-komponent\\databas-komponent\\InfDB.jar
 file.reference.InfDB.jar-2=C:\\Users\\Jacob\\Desktop\\tutorial\\InfDB.jar
+file.reference.InfDB.jar-3=databas-komponent\\InfDB.jar
 file.reference.jaybird-full-2.2.5.jar=C:\\Users\\Jacob\\Desktop\\tutorial\\jaybird-full-2.2.5.jar
 file.reference.jaybird-full-2.2.5.jar-1=..\\Downloads\\databas-komponent\\databas-komponent\\jaybird-full-2.2.5.jar
 file.reference.jaybird-full-2.2.5.jar-2=C:\\Users\\Jacob\\Desktop\\tutorial\\jaybird-full-2.2.5.jar
+file.reference.jaybird-full-2.2.5.jar-3=databas-komponent\\jaybird-full-2.2.5.jar
 file.reference.poi-3.9.jar=C:\\Users\\Jacob\\Downloads\\poi-3.9.jar\\poi-3.9.jar
 file.reference.poi-scratchpad-3.8-beta3.jar=C:\\Users\\Jacob\\Downloads\\jar_files (1)\\poi-scratchpad-3.8-beta3.jar
 includes=**
@@ -56,7 +58,9 @@ javac.classpath=\
     ${file.reference.jaybird-full-2.2.5.jar-2}:\
     ${file.reference.poi-3.9.jar}:\
     ${file.reference.poi-scratchpad-3.8-beta3.jar}:\
-    ${file.reference.aspose.words.jdk16-7.0.0.jar}
+    ${file.reference.aspose.words.jdk16-7.0.0.jar}:\
+    ${file.reference.jaybird-full-2.2.5.jar-3}:\
+    ${file.reference.InfDB.jar-3}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
