--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -2,13 +2,13 @@ compile.on.save=true
 do.depend=false
 do.jar=true
 do.jlink=false
-file.reference.InfDB.jar=C:\\Users\\juan\\Desktop\\InfDB.jar
-file.reference.InfDB.jar-1=C:\\Users\\juan\\Desktop\\InfDB.jar
-file.reference.InfDB.jar-2=C:\\Users\\juan\\Desktop\\InfDB.jar
-file.reference.jaybird-full-2.2.5.jar=C:\\Users\\juan\\Desktop\\jaybird-full-2.2.5.jar
-file.reference.jaybird-full-2.2.5.jar-1=C:\\Users\\juan\\Desktop\\jaybird-full-2.2.5.jar
-file.reference.jaybird-full-2.2.5.jar-2=C:\\Users\\juan\\Desktop\\jaybird-full-2.2.5.jar
+file.reference.InfDB.jar=/Users/julia/db/InfDB(1)(1).jar
+file.reference.InfDB.jar-1=/Users/julia/db/InfDB(1)(1).jar
+file.reference.InfDB.jar-2=/Users/julia/db/InfDB(1)(1).jar
+file.reference.jaybird-full-2.2.5.jar=/Users/julia/db/jaybird-full-2.2.5(1).jar
+file.reference.jaybird-full-2.2.5.jar-1=/Users/julia/db/jaybird-full-2.2.5(1).jar
+file.reference.jaybird-full-2.2.5.jar-2=/Users/julia/db/jaybird-full-2.2.5(1).jar
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=C:\\Users\\juan\\AppData\\Roaming\\NetBeans\\11.0\\build.properties
+user.properties.file=/Users/julia/Library/Application Support/NetBeans/11.2/build.properties
