--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -45,6 +45,7 @@ file.reference.jaybird-full-2.2.5.jar-1=..\\Downloads\\databas-komponent\\databa
 file.reference.jaybird-full-2.2.5.jar-2=C:\\Users\\Jacob\\Desktop\\tutorial\\jaybird-full-2.2.5.jar
 file.reference.jaybird-full-2.2.5.jar-3=databas-komponent\\jaybird-full-2.2.5.jar
 file.reference.jcalendar-1.4.jar=C:\\gitProjekt\\MIB2020-01-15\\MIB\\LibraryFiles\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-1=..\\Downloads\\jcalendar-1.4.jar
 file.reference.poi-3.9.jar=C:\\Users\\Jacob\\Downloads\\poi-3.9.jar\\poi-3.9.jar
 file.reference.poi-scratchpad-3.8-beta3.jar=C:\\Users\\Jacob\\Downloads\\jar_files (1)\\poi-scratchpad-3.8-beta3.jar
 includes=**
@@ -62,7 +63,8 @@ javac.classpath=\
     ${file.reference.aspose.words.jdk16-7.0.0.jar}:\
     ${file.reference.InfDB.jar-3}:\
     ${file.reference.jaybird-full-2.2.5.jar-3}:\
-    ${file.reference.jcalendar-1.4.jar}
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.jcalendar-1.4.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
