--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -11,4 +11,4 @@ file.reference.jaybird-full-2.2.5.jar-2=C:\\Users\\Simon Sandberg\\OneDrive\\Sys
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=C:\\Users\\Jacob\\AppData\\Roaming\\NetBeans\\11.2\\build.properties
+user.properties.file=C:\\Users\\jacob\\AppData\\Roaming\\NetBeans\\11.2\\build.properties
