--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -8,7 +8,9 @@ file.reference.InfDB.jar-2=C:\\Users\\Simon Sandberg\\OneDrive\\System\\Scrum_Xt
 file.reference.jaybird-full-2.2.5.jar=C:\\Users\\Simon Sandberg\\OneDrive\\System\\Scrum_XtremePrograming\\System_Files\\Project-Corona\\databas-komponent\\jaybird-full-2.2.5.jar
 file.reference.jaybird-full-2.2.5.jar-1=C:\\Users\\Simon Sandberg\\OneDrive\\System\\Scrum_XtremePrograming\\System_Files\\Project-Corona\\databas-komponent\\jaybird-full-2.2.5.jar
 file.reference.jaybird-full-2.2.5.jar-2=C:\\Users\\Simon Sandberg\\OneDrive\\System\\Scrum_XtremePrograming\\System_Files\\Project-Corona\\databas-komponent\\jaybird-full-2.2.5.jar
+file.reference.jcalendar-1.4.jar=C:\\Users\\Simon Sandberg\\OneDrive\\System\\Scrum_XtremePrograming\\System_Files\\Project-Corona\\databas-komponent\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-1=C:\\Users\\Simon Sandberg\\OneDrive\\System\\Scrum_XtremePrograming\\System_Files\\Project-Corona\\databas-komponent\\jcalendar-1.4.jar
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=C:\\Users\\mizz_\\AppData\\Roaming\\NetBeans\\11.2\\build.properties
+user.properties.file=C:\\Users\\Simon Sandberg\\AppData\\Roaming\\NetBeans\\11.2\\build.properties
