--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -13,4 +13,4 @@ file.reference.jcalendar-1.4.jar-1=C:\\Users\\Simon Sandberg\\OneDrive\\System\\
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=C:\\Users\\Simon Sandberg\\AppData\\Roaming\\NetBeans\\11.2\\build.properties
+user.properties.file=C:\\Users\\Jacob\\AppData\\Roaming\\NetBeans\\11.2\\build.properties
