--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -2,13 +2,14 @@ compile.on.save=true
 do.depend=false
 do.jar=true
 do.jlink=false
-file.reference.InfDB.jar=C:\\Users\\Simon Sandberg\\OneDrive\\System\\Scrum_XtremePrograming\\System_Files\\Project-Corona\\databas-komponent\\InfDB.jar
-file.reference.InfDB.jar-1=C:\\Users\\Simon Sandberg\\OneDrive\\System\\Scrum_XtremePrograming\\System_Files\\Project-Corona\\databas-komponent\\InfDB.jar
-file.reference.InfDB.jar-2=C:\\Users\\Simon Sandberg\\OneDrive\\System\\Scrum_XtremePrograming\\System_Files\\Project-Corona\\databas-komponent\\InfDB.jar
-file.reference.jaybird-full-2.2.5.jar=C:\\Users\\Simon Sandberg\\OneDrive\\System\\Scrum_XtremePrograming\\System_Files\\Project-Corona\\databas-komponent\\jaybird-full-2.2.5.jar
-file.reference.jaybird-full-2.2.5.jar-1=C:\\Users\\Simon Sandberg\\OneDrive\\System\\Scrum_XtremePrograming\\System_Files\\Project-Corona\\databas-komponent\\jaybird-full-2.2.5.jar
-file.reference.jaybird-full-2.2.5.jar-2=C:\\Users\\Simon Sandberg\\OneDrive\\System\\Scrum_XtremePrograming\\System_Files\\Project-Corona\\databas-komponent\\jaybird-full-2.2.5.jar
+file.reference.InfDB.jar=C:\\Users\\johan\\Desktop\\JavaGrejer\\InfDB.jar
+file.reference.InfDB.jar-1=C:\\Users\\johan\\Desktop\\JavaGrejer\\InfDB.jar
+file.reference.InfDB.jar-2=C:\\Users\\johan\\Desktop\\JavaGrejer\\InfDB.jar
+file.reference.jaybird-full-2.2.5.jar=C:\\Users\\johan\\Desktop\\JavaGrejer\\jaybird-full-2.2.5.jar
+file.reference.jaybird-full-2.2.5.jar-1=C:\\Users\\johan\\Desktop\\JavaGrejer\\jaybird-full-2.2.5.jar
+file.reference.jaybird-full-2.2.5.jar-2=C:\\Users\\johan\\Desktop\\JavaGrejer\\jaybird-full-2.2.5.jar
+file.reference.jcalendar-1.4.jar=C:\\Users\\johan\\Desktop\\JavaGrejer\\jcalendar-1.4.jar
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=C:\\Users\\Jacob\\AppData\\Roaming\\NetBeans\\11.2\\build.properties
+user.properties.file=C:\\Users\\johan\\AppData\\Roaming\\NetBeans\\11.0\\build.properties
