--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -40,6 +40,8 @@ file.reference.InfDB.jar=C:\\Users\\Jacob\\Desktop\\tutorial\\InfDB.jar
 file.reference.InfDB.jar-1=..\\Downloads\\databas-komponent\\databas-komponent\\InfDB.jar
 file.reference.InfDB.jar-2=C:\\Users\\Jacob\\Desktop\\tutorial\\InfDB.jar
 file.reference.InfDB.jar-3=databas-komponent\\InfDB.jar
+file.reference.javax.activation-1.2.0.jar=C:\\Users\\johan\\Desktop\\javax.activation-1.2.0.jar
+file.reference.javax.mail.jar=C:\\Users\\johan\\Desktop\\javax.mail.jar
 file.reference.jaybird-full-2.2.5.jar=C:\\Users\\Jacob\\Desktop\\tutorial\\jaybird-full-2.2.5.jar
 file.reference.jaybird-full-2.2.5.jar-1=..\\Downloads\\databas-komponent\\databas-komponent\\jaybird-full-2.2.5.jar
 file.reference.jaybird-full-2.2.5.jar-2=C:\\Users\\Jacob\\Desktop\\tutorial\\jaybird-full-2.2.5.jar
@@ -62,7 +64,9 @@ javac.classpath=\
     ${file.reference.aspose.words.jdk16-7.0.0.jar}:\
     ${file.reference.InfDB.jar-3}:\
     ${file.reference.jaybird-full-2.2.5.jar-3}:\
-    ${file.reference.jcalendar-1.4.jar}
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.javax.activation-1.2.0.jar}:\
+    ${file.reference.javax.mail.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
